# specmgr

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  biome.json  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  specmgr.config.yaml  techstack.md  tsconfig.json  tsconfig.server.json
.claude/agents/: claude-code-sdk-expert.md  fsharp-ddd-expert.md  implementation-qa-checker.md  oracle-docs-specialist.md  project-manager-requirements.md  python-server-dev.md  python-type-safety-expert.md  qdrant-vector-db-expert.md  scrum-pm-coordinator.md  senior-code-reviewer.md  senior-engineer-architect.md  typescript-performance-expert.md  typescript-react-web-dev.md
.husky/: pre-commit
docs/: README.md  architecture.md  mermaid-test.md
docs/api/: backend-api.md
docs/specifications/: README.md
docs/technical-docs/: bidirectional-verification-system.md  document-structure.md  id-and-lifecycle-details.md  naming-and-file-placement-rules.md  oracle-commands.md  oracle-fsharp-cli-design.md  sdd-yaml-format-guide.md  sdd-yaml-format-v2.md  specification-format-v2.md  specification-format.md  specification-operation-flow.md  type-system-theory.md  ubiquitous-language-guide.md
src/server/: index.ts  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.json
src/server/app/api/: routes.py
src/server/app/api/endpoints/: chat.py  files.py  health.py  search.py  sync.py
src/server/app/core/: config.py  exceptions.py  logging_utils.py
src/server/app/models/: api_models.py  error_types.py  queue_types.py  specification.py  watcher_types.py
src/server/app/services/: chat_service.py  embedding_service.py  file_service.py  file_watcher.py  health_service.py  manifest_service.py  qdrant_service.py  queue_service.py  scheduler_service.py  search_service.py  sync_service.py
src/server/docs/: sample.md
src/server/routes/: files.ts
src/server/services/: chatService.ts  claudeCodeService.ts  embeddingService.ts  fileService.ts  fileWatcher.ts  manifestService.ts  qdrantService.ts  queueService.ts  searchService.ts  textSearchService.ts
src/server/tests/: conftest.py
src/server/tests/e2e/: test_full_workflow.py
src/server/tests/integration/: test_api_integration.py  test_manifest_sync_integration.py  test_manifest_sync_integration.py.disabled  test_qdrant_integration.py  test_queue_integration.py  test_service_integration.py
src/server/tests/unit/: test_api_chat.py  test_api_files.py  test_api_health.py  test_api_search.py  test_api_sync.py  test_config.py  test_main.py  test_markdown_handler.py  test_service_chat.py  test_service_embedding.py  test_service_file.py  test_service_file_watcher.py  test_service_health.py  test_service_manifest.py  test_service_qdrant.py  test_service_queue.py  test_service_search.py  test_service_sync.py
(+65 files in other folders)
