[project]
name = "specmgr-server"
version = "0.1.0"
description = "Local DocSearch & Chat Assistant Server"
authors = [{name = "biwakonbu"}]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.7.8",
    "qdrant-client>=1.6.9",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.2.1",
    "watchdog>=3.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-redis>=4.6.0",
    "types-aiofiles>=23.2.0",
    "types-pyyaml>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-redis>=4.6.0",
    "types-aiofiles>=23.2.0",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "T20"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN201", "ANN202", "ANN401", "E501", "S324"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "app.services.file_watcher"
warn_unreachable = false

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "watchdog.*",
    "numpy.*"
]
ignore_missing_imports = true


[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/*_test.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
